# Killian-Project

./: Cargo.toml  GDD.md  README.md
.github/workflows/: release-client.yml  windows-client.yml
apps/killian-client/: Cargo.toml
apps/killian-client/src/: credentials.rs  main.rs  model.rs  net.rs  view.rs  view_model.rs
apps/killian-server/: Cargo.toml
apps/killian-server/src/: craft.rs  gather.rs  items.rs  main.rs  market.rs  mobs.rs  persistence.rs  quests.rs
crates/killian-protocol/: Cargo.toml
crates/killian-protocol/src/: lib.rs
data/players/: Kemyxwz.json  durukar.json  ldev.json
docs/superpowers/plans/: 2026-05-10-killian-poc.md  2026-05-12-gather-system.md
docs/superpowers/specs/: 2026-05-10-killian-poc-design.md  2026-05-12-xp-bar-footer-design.md
scripts/: build-dist.sh  play.sh  serve-web.sh  start-server.sh
web-client/: index.html
web-client/src/: app.js  model.js  styles.css  view.js  viewmodel.js
