[package]
name = "killian-client"
version = "0.1.0"
edition = "2021"

[dependencies]
killian-protocol = { path = "../../crates/killian-protocol" }
anyhow = "1"
crossterm = "0.29"
futures-util = "0.3"
ratatui = "0.30"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.28"
